[gd_scene load_steps=10 format=2]

[ext_resource path="res://Cliente.gd" type="Script" id=1]
[ext_resource path="res://fontes/athena_u.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://fontes/Calibri.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fontes/CALIBRIB.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
draw_center = false
border_width_bottom = 1
border_color = Color( 0.172549, 0.164706, 0.196078, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 4 )

[node name="Cliente" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.45178
margin_top = -0.949951
margin_right = 7.45178
margin_bottom = -0.949951
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_start" type="Button" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.562
anchor_right = 0.5
anchor_bottom = 0.562
margin_left = -214.695
margin_top = 21.3213
margin_right = 206.305
margin_bottom = 141.321
custom_fonts/font = SubResource( 1 )
text = "Conctar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_exit" type="Button" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.769
anchor_right = 0.5
anchor_bottom = 0.769
margin_left = -209.143
margin_top = 21.4985
margin_right = 211.857
margin_bottom = 141.498
custom_fonts/font = SubResource( 1 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit_name" type="LineEdit" parent="GUI"]
anchor_left = 0.516
anchor_top = 0.354
anchor_right = 0.516
anchor_bottom = 0.354
margin_left = -389.225
margin_top = -37.3843
margin_right = 428.775
margin_bottom = 31.6157
custom_fonts/font = SubResource( 2 )
placeholder_text = "Nome do Jogador..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit_position_x" type="LineEdit" parent="GUI"]
margin_left = 330.0
margin_top = 348.0
margin_right = 530.0
margin_bottom = 398.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
max_length = 4
clear_button_enabled = true
placeholder_text = "Max: 1000"
placeholder_alpha = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit_position_y" type="LineEdit" parent="GUI"]
margin_left = 641.364
margin_top = 348.161
margin_right = 841.364
margin_bottom = 398.161
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
max_length = 4
clear_button_enabled = true
placeholder_text = "Max: 700"
placeholder_alpha = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_x" type="Label" parent="GUI"]
margin_left = 287.055
margin_top = 346.161
margin_right = 329.055
margin_bottom = 397.161
custom_fonts/font = SubResource( 5 )
text = "X:"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_y" type="Label" parent="GUI"]
margin_left = 599.0
margin_top = 348.0
margin_right = 639.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 5 )
text = "Y:"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="GUI/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="GUI/btn_exit" to="." method="_on_btn_exit_pressed"]
[connection signal="focus_exited" from="GUI/edit_position_x" to="." method="_on_edit_position_x_focus_exited"]
[connection signal="focus_exited" from="GUI/edit_position_y" to="." method="_on_edit_position_y_focus_exited"]
